@@ -140,6 +140,11 @@ class ObjectIdentifierDecoderTestCase(unittest.TestCase):
             ints2octs((6, 7, 43, 6, 143, 255, 255, 255, 127))
             ) == ((1, 3, 6, 4294967295), null)
 
+    def testEdges4(self):
+        assert decoder.decode(
+            ints2octs((6, 5, 85, 4, 128, 129, 0))
+            ) == ((2, 5, 4, 128), null)
+
 class SequenceDecoderTestCase(unittest.TestCase):
     def setUp(self):
         self.s = univ.Sequence(componentType=namedtype.NamedTypes(
